Refactor cart total-summation
Old code had AR queries inside the view, it had duplicated summation code in
multiple places, and one of the summations used weird scope-violating mutation
to do the summation.

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -15,9 +15,8 @@
         </tr>
       </thead>
       <tbody>
-        <% @cart_total = 0 %>
-        <% cart.each do |product_id, details| %>
-          <%= render 'item', product_id: product_id, details: details %>
+        <% enhanced_cart.each do |item| %>
+          <%= render 'item', product: item[:product], quantity: item[:quantity].to_i %>
         <% end %>
       </tbody>
       <tfoot>
@@ -26,7 +25,7 @@
             TOTAL:
           </th>
           <th>
-            <%= @cart_total %>
+            <%= cart_subtotal_cents / 100.0 %>
           </th>
         </tr>
       </tfoot>
@@ -39,7 +38,7 @@
         <script
           src="https://checkout.stripe.com/checkout.js" class="stripe-button"
           data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-          data-amount="<%= @cart_total * 100 %>"
+          data-amount="<%= cart_subtotal_cents %>"
           data-name="Jungle"
           data-description="Khurram Virani's Jungle Order"
           data-locale="auto"
