♪ anything put can do post can do better ♪

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,6 +6,10 @@
 // App
 @import "products";
 
+.line-item-quantity form.button_to {
+  display: inline;
+}
+
 // Global
 body {
   padding-top: 70px;
