--- a/app/views/carts/_item.html.erb
+++ b/app/views/carts/_item.html.erb
@@ -16,14 +16,10 @@
     <td>
       <%= product.price %>
     </td>
-    <td>
-      <%= link_to remove_item_cart_path(product_id: product_id), class: 'btn btn-xs btn-danger', method: :delete do %>
-        -
-      <% end %>
+    <td class="line-item-quantity">
+      <%= button_to remove_item_cart_path(product_id: product_id), class: 'btn btn-xs btn-danger' do %> - <% end %>
       <%= quantity %>
-      <%= link_to add_item_cart_path(product_id: product_id), class: 'btn btn-xs btn-success', method: :put do %>
-        +
-      <% end %>
+      <%= button_to add_item_cart_path(product_id: product_id), class: 'btn btn-xs btn-success' do %> + <% end %>
     </td>
     <td>
       <%= item_total %>
