Make the form.button_to css more general so it applies elsewhere

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,11 +6,12 @@
 // App
 @import "products";
 
-.line-item-quantity form.button_to {
-  display: inline;
-}
-
 // Global
 body {
   padding-top: 70px;
+}
+
+// Bootstrap adjustments
+form.button_to {
+  display: inline;
 }
