Fix 500 due to old code from prev branch

--- a/app/views/carts/_item.html.erb
+++ b/app/views/carts/_item.html.erb
@@ -11,9 +11,9 @@
     <%= product.price %>
   </td>
   <td>
-    <%= button_to remove_item_cart_path(product_id: product_id), class: 'btn btn-xs btn-danger' do %> - <% end %>
-      <%= quantity %>
-      <%= button_to add_item_cart_path(product_id: product_id), class: 'btn btn-xs btn-success' do %> + <% end %>
+    <%= button_to remove_item_cart_path(product_id: product.id), class: 'btn btn-xs btn-danger' do %> - <% end %>
+    <%= quantity %>
+    <%= button_to add_item_cart_path(product_id: product.id), class: 'btn btn-xs btn-success' do %> + <% end %>
   </td>
   <td>
     <%= product.price * quantity %>
